[tool.poetry]
name = "inetbox-py"
version = "0.4"
description = ""
authors = ["Daniel Fett <fett@danielfett.de>"]
readme = "README.md"
packages = [{include = "inetbox"}]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
miqro = ">=1.2.2"
bitstruct = "^8.15.1"
paho-mqtt = {version = "^1.6.1", optional = true}
python-dateutil = ">2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
truma_service = ["paho-mqtt"]

[tool.poetry.scripts]
truma_service = { callable = "inetbox:truma_service.run", extras = ["truma_service"]}
